<?xml version="1.0"?>
<package format="2">
  <name>project2</name>
  <version>1.0.0</version>
  <description>CSCE 274 Project 2 template</description>

  <maintainer email="IJSALMAN@email.sc.edu">Ibrahim Salman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>duckietown_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>duckietown_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export></export>
</package>
